infrastructure/cloudbeaver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver-service
  namespace: cloudbeaver-system
spec:
  selector:
    app: cloudbeaver-service
  ports:
    - protocol: TCP
      port: 8978
      targetPort: 8978
  type: ClusterIP
